--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-12">
                         <!-- cancel button -->
-                        <a class="btn cancel-delete-btn" href="{{ url_for('get_vehicles') }}" role="button">Cancel <i class="fa-regular fa-circle-xmark"></i></a>
+                        <a class="btn cancel-delete-btn" href="{{ url_for('show_vehicles') }}" role="button">Cancel <i class="fa-regular fa-circle-xmark"></i></a>
                         <!-- edit button -->
                         <button class="btn add-edit-save-btn" type="submit">Save Changes <i class="fa-solid fa-pen"></i></button>
                     </div>
