--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar text-shadow" data-bs-theme="dark" id="navbar">
             <div class="container-fluid">
-                <a class="navbar-brand logo" href="{{ url_for('get_vehicles') }}">My Vehicle History</a>
+                <a class="navbar-brand logo" href="{{ url_for('show_vehicles') }}">My Vehicle History</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ url_for('get_vehicles') }}">Home</a>
+                            <a class="nav-link active" aria-current="page" href="{{ url_for('show_vehicles') }}">Show Vehicles</a>
                         </li>
                         {% if session.user  %}
                             <li class="nav-item">
