--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -9,7 +9,7 @@
                 <div class="row"></div>
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="vehicle_type" class="form-label">Vehicle Type</label>
+                        <label for="vehicle_type" class="form-label">Vehicle Type</label><span> * </span>
                         <select id="vehicle_type" name="vehicle_type" class="form-select" aria-label="select vehicle type" required>
                             <option value="" selected>Select Vehicle Type...</option>
                             {% for vehicle_type in vehicle_types %}
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="make" class="form-label">Vehicle Make</label>
+                        <label for="make" class="form-label">Vehicle Make</label><span> * </span>
                         <input type="text" class="form-control" id="make" name="make"
                         minlength="2" maxlength="25" placeholder="Enter make of vehicle..." pattern="^[a-zA-Z0-9\s]{2,25}$" required>
                     </div>
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="model" class="form-label">Model</label>
+                        <label for="model" class="form-label">Model</label><span> * </span>
                         <input type="text" class="form-control" id="model" name="model"
                         placeholder="Enter model..." minlength="1" maxlength="25" pattern="^[a-zA-Z0-9\s]{1,25}$" required>
                     </div>
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="capacity" class="form-label">Engine Capacity (e.g. 1.8)</label>
+                        <label for="capacity" class="form-label">Engine Capacity (e.g. 1.8)</label><span> * </span>
                         <input type="number" class="form-control" id="capacity" name="capacity"
                         min="0.1" max="9999" step="0.1" value="" required>
                     </div>
@@ -63,7 +63,7 @@
                         <i class="fa-regular fa-calendar-days"></i>
                         <label for="year" class="form-label">Year Of Manufacture</label>
                         <input type="number" class="form-control" id="year" name="year" min="1885" max="2026"
-                            value="" required>
+                            value="">
                     </div>
                 </div>
                 <!-- colour -->
@@ -72,7 +72,7 @@
                         <i class="fa-solid fa-palette"></i>
                         <label for="colour" class="form-label">Colour</label>
                         <input type="text" class="form-control" id="colour" name="colour" minlength="3" maxlength="20"
-                            placeholder="Enter Colour..." required>
+                            placeholder="Enter Colour..." value="">
                     </div>
                 </div>
                 <!-- current owner switch -->
@@ -87,20 +87,20 @@
                 <div class="row">
                     <div class="form-check form-switch">
                         <label class="form-check-label" for="show_my_vehicle">Show My Vehicle</label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
-                        <i class="fa-solid fa-car-side"></i>
+                        <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle" required>
+                        <i class="fa-solid fa-car-side"></i><span> * </span>
                     </div>
                 </div>
                 <!-- upload a photo of vehicle -->
                     <div class="row">
                         <div class="form-group">
                             <i class="fa-regular fa-image"></i>
-                            <label for="image">Add a photo of your vehicle</label>
+                            <label for="image">Add a photo of your vehicle</label><span> * </span>
                             <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                         </div>
                         <div class="form-group">
                             <i class="fa-solid fa-pen"></i>
-                            <label for="description">Image Description</label>
+                            <label for="description">Image Description</label><span> * </span>
                             <textarea class="form-control" id="description" name="description" rows="2" max="25" required></textarea>
                         </div>
                     </div>
@@ -109,6 +109,7 @@
                     <div class="col-12">
                         <button class="btn add-edit-save-btn" type="submit">Add Vehicle</button>
                     </div>
+                    <span>* required info for form submission</span>
                 </div>
             </form>
         </div>
