--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -9,7 +9,7 @@
                 <div class="row"></div>
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="vehicle_type" class="form-label">Vehicle Type</label>
+                        <label for="vehicle_type" class="form-label">Vehicle Type</label><span> * </span>
                         <select id="vehicle_type" name="vehicle_type" class="form-select" aria-label="select vehicle type" required>
                             <option value="">Select Vehicle Type...</option>
                             {% for vehicle_type in vehicle_types %}
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="make" class="form-label">Vehicle Make</label>
+                        <label for="make" class="form-label">Vehicle Make</label><span> * </span>
                         <input type="text" class="form-control" id="make" name="make"
                         minlength="2" maxlength="25" value="{{ vehicle.make }}" placeholder="Enter make of vehicle..." pattern="^[a-zA-Z0-9\s]{2,25}$" required>
                     </div>
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="model" class="form-label">Model</label>
+                        <label for="model" class="form-label">Model</label><span> * </span>
                         <input type="text" class="form-control" id="model" name="model"
                         placeholder="Enter model..." minlength="1" maxlength="25" value="{{ vehicle.model }}" pattern="^[a-zA-Z0-9\s]{2,25}$" required>
                     </div>
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="capacity" class="form-label">Engine Capacity (Litres/CC)</label>
+                        <label for="capacity" class="form-label">Engine Capacity (Litres/CC)</label><span> * </span>
                         <input type="number" class="form-control" id="capacity" name="capacity"
                         min="0.1" max="9999" step="0.1" value="{{ vehicle.capacity}}" required>
                     </div>
@@ -93,7 +93,7 @@
                         <i class="fa-solid fa-palette"></i>
                         <label for="colour" class="form-label">Colour</label>
                         <input type="text" class="form-control" id="colour" name="colour" minlength="3" maxlength="20"
-                            value="{{ vehicle.colour }}" required>
+                            value="{{ vehicle.colour }}">
                     </div>
                 </div>
                 <!-- current owner switch -->
@@ -117,19 +117,19 @@
                         {% else %}
                             <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
                         {% endif %}
-                        <i class="fa-solid fa-car-side"></i>
+                        <i class="fa-solid fa-car-side"></i><span> * </span>
                     </div>
                 </div>
                 <!-- upload a photo of vehicle -->
                 <div class="row">
                     <div class="form-group">
                         <i class="fa-regular fa-image"></i>
-                        <label for="image">Add a photo of your vehicle</label>
-                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required />
+                        <label for="image">Add a photo of your vehicle</label><span> * </span>
+                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                     </div>
                     <div class="form-group">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="description">Image Description</label>
+                        <label for="description">Image Description</label><span> * </span>
                         <textarea class="form-control" id="description" name="description" rows="2" max="25" required></textarea>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                         <!-- cancel button -->
                         <a class="btn cancel-delete-btn" href="{{ url_for('show_vehicles') }}" role="button">Cancel <i class="fa-regular fa-circle-xmark"></i></a>
                         <!-- edit button -->
-                        <button class="btn add-edit-save-btn" type="submit">Save Changes <i class="fa-solid fa-pen"></i></button>
+                        <button class="btn add-edit-save-btn" type="submit">Save Changes <i class="fa-solid fa-pen"></i></button><span>* required info for form submission</span>
                     </div>
                 </div>
             </form>
