--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="form-check form-switch">
                         <label class="form-check-label" for="show_my_vehicle">Show My Vehicle</label>
-                        <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle" required>
+                        <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
                         <i class="fa-solid fa-car-side"></i><span> * </span>
                     </div>
                 </div>
