--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -88,7 +88,7 @@
                     <div class="form-check form-switch">
                         <label class="form-check-label" for="show_my_vehicle">Show My Vehicle</label>
                         <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
-                        <i class="fa-solid fa-car-side"></i><span> * </span>
+                        <i class="fa-solid fa-car-side"></i>
                     </div>
                 </div>
                 <!-- upload a photo of vehicle -->
