--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -117,7 +117,7 @@
                         {% else %}
                             <input class="form-check-input" type="checkbox" role="switch" id="show_my_vehicle" name="show_my_vehicle">
                         {% endif %}
-                        <i class="fa-solid fa-car-side"></i><span> * </span>
+                        <i class="fa-solid fa-car-side"></i>
                     </div>
                 </div>
                 <!-- upload a photo of vehicle -->
