--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-primary btn-lg" href="{{ url_for('add_vehicle_type') }}"
+            <a class="btn add-edit-save-btn btn-lg" href="{{ url_for('add_vehicle_type') }}"
                role="button"><i class="fa-solid fa-plus"></i>  Create Vehicle Type</a>
         </div>
     </div>
@@ -17,10 +17,10 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ vehicle_type.vehicle_type }}</h5>
                         <!-- edit button -->
-                        <a class="btn btn-primary" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
+                        <a class="btn add-edit-save-btn" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
                                 class="fa-solid fa-pen"></i></a>
                         <!-- delete button -->
-                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                        <button type="button" class="btn cancel-delete-btn btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal">
                             Delete <i class="fa-regular fa-circle-xmark"></i>
                         </button>
                         
@@ -37,7 +37,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <a class="btn btn-danger" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}"
+                                        <a class="btn cancel-delete-btn" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}"
                                             role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
                                     </div>
                                 </div>
