Style sign-in and register buttons and assoc. a link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,10 @@ body {
     font-family: 'Duru Sans', sans-serif;
 }
 
+a {
+    color: #3066be;
+}
+
 .flashes h4 {
     background-color: #3066be;
     color: #fbfaf8;
