--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
                             </div>
                             <!-- register -->
                             <div class="mb-3 text-center text-shadow">
-                                <input class="btn btn-primary btn-lg" type="submit" value="Register">
+                                <input class="btn add-edit-save-btn btn-lg" type="submit" value="Register">
                                 <i class="fas fa-sign-in-alt"></i>
                             </div>
                         </div>
