--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -24,7 +24,7 @@
                             </div>
                             <!-- sign in -->
                             <div class="mb-3 text-center text-shadow">
-                                <input class="btn btn-primary btn-lg" type="submit" value="Sign In">
+                                <input class="btn add-edit-save-btn btn-lg" type="submit" value="Sign In">
                                 <i class="fas fa-sign-in-alt"></i>
                             </div>
                         </div>
