--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -25,7 +25,7 @@
                 {% if vehicle.show_my_vehicle == "yes" %}
                     <div class="col-lg-6">
                         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-                            <img class="card-img-top" src="{{ vehicle.image_url }}">
+                            <img class="card-img-top" src="{{ vehicle.image_url }}" alt="A photo of a {{ vehicle.make }} {{ vehicle.model }}">
                             <div class="card-body"> 
                                 <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
                                 <h5 class="card-subtitle">{{ vehicle.model }}</h5>
