--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -6,7 +6,7 @@
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}" enctype="multipart/form-data">
                 <!-- vehicle type -->
-                <div class="row"></div>
+                <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
                         <label for="vehicle_type" class="form-label">Vehicle Type</label><span> * </span>
