Add favicon to site

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- link to custom css -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="icon" type="image/x-icon" href="static/images/mvh_favicon.png">
     {% block styles %}
     {% endblock %}
     <title>My Vehicle History</title>
