Add active page to nav-menu. Begin css comments

--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'vehicle_types' %}
 {% block content %}
 
     <h3 class="page-title">Manage Vehicles Types</h3>
