--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,35 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Duru+Sans&family=Montserrat:ital,wght@1,600&display=swap');
+/* import fonts from Googlefonts */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@600&family=Montserrat:ital,wght@1,600&display=swap');
 
+/* remove all margins, padding and any borders */
 * {
     margin: 0;
     padding: 0;
     border: 0;
 }
 
+/* set styling for body. Font-famiy, background and text colour */
 body {
     font-family: 'Duru Sans', sans-serif;
     background-color: #fbfaf8;
     color: #0a122a;
 }
 
+/* sets styling for the logo */
 .logo {
     font-family: 'Montserrat', sans-serif;
     font-size: 150%;
     margin-left: 2%;
 }
 
+/* sets navbar background colour */
 #navbar {
     background-color: #004225;
 }
 
+/* sets font family of navbar links */
 .nav-link {
     font-family: 'Duru Sans', sans-serif;
 }
 
+/* sets colour of links to blue (register and already signed-in) */
 a {
     color: #3066be;
 }
 
+/* sets the styling for the flash message area */
 .flashes h4 {
     background-color: #3066be;
     color: #fbfaf8;
@@ -37,36 +45,43 @@ a {
     text-align: center;
 }
 
+/* sets styling for the message area used on show_vehicles and profile pages */
 .message-area {
     margin-top: 2%;
     text-align: center;
 }
 
+/* adds a little space top and bottom of form-groups */
 .form-group {
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
+/* sets the styling for the labels used on add/edit forms */
 label {
     font-size: 120%;
     font-weight: bold;
     color: #0a122a;
 }
 
+/* adds a little space below the query input box */
 #query {
     margin-bottom: 2%;
 }
 
+/* adds a small left margin to the form checks */
 .form-check {
     margin-left: 2%;
 }
 
+/* sets the styling used for the page titles */
 .page-title {
     text-transform: capitalize;
     text-align: center;
     margin-top: 2%;
     margin-bottom: 2%;
 }
+
 
 .card-img-top {
     max-height: 500px;
