--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'add_new_vehicle' %}
 {% block content %}
 
     <h3 class="page-title">Add New Vehicle</h3>
