--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'show_vehicles' %}
 {% block content %}
     
     <h3 class="page-title">Show Vehicles</h3>
