Update styling for modal cancel buttons

--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -37,7 +37,7 @@
                                         <p>Are You Sure You Want To Delete This Vehicle Type?</p>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn add-edit-save-btn" data-bs-dismiss="modal">Close</button>
                                         <a class="btn cancel-delete-btn" href="{{ url_for('delete_vehicle_type', vehicle_type_id=vehicle_type._id) }}"
                                             role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
                                     </div>
