--- a/templates/profile.html
+++ b/templates/profile.html
@@ -65,7 +65,7 @@
                                             <p>Are You Sure You Want To Delete This Vehicle?</p>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" class="btn add-edit-save-btn" data-bs-dismiss="modal">Close</button>
                                             <a class="btn cancel-delete-btn" href="{{ url_for('delete_vehicle', vehicle_id=vehicle._id) }}"
                                                 role="button">Delete <i class="fa-regular fa-circle-xmark"></i></a>
                                         </div>
