--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -45,6 +45,7 @@
                         <input type="number" class="form-control" id="capacity" name="capacity"
                         min="0.1" max="9999" step="0.1" value="" required>
                     </div>
+                    <!-- litres or cc radio buttons -->
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
                         <label class="form-check-label" for="litre_cc">
@@ -93,18 +94,18 @@
                     </div>
                 </div>
                 <!-- upload a photo of vehicle -->
-                    <div class="row">
-                        <div class="form-group">
-                            <i class="fa-regular fa-image"></i>
-                            <label for="image">Add a photo of your vehicle</label><span> * </span>
-                            <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
-                        </div>
-                        <div class="form-group">
-                            <i class="fa-solid fa-pen"></i>
-                            <label for="description">Image Description</label><span> * </span>
-                            <textarea class="form-control" id="description" name="description" rows="2" max="25" required></textarea>
-                        </div>
+                <div class="row">
+                    <div class="form-group">
+                        <i class="fa-regular fa-image"></i>
+                        <label for="image">Add a photo of your vehicle</label><span> * </span>
+                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                     </div>
+                    <div class="form-group">
+                        <i class="fa-solid fa-pen"></i>
+                        <label for="description">Image Description</label>
+                        <textarea class="form-control" id="description" name="description" rows="2" max="200"></textarea>
+                    </div>
+                </div>
                 <!-- submit button -->
                 <div class="row">
                     <div class="col-12">
