--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -36,7 +36,7 @@
                         <i class="fa-solid fa-pen"></i>
                         <label for="model" class="form-label">Model</label><span> * </span>
                         <input type="text" class="form-control" id="model" name="model"
-                        placeholder="Enter model..." minlength="1" maxlength="25" value="{{ vehicle.model }}" pattern="^[a-zA-Z0-9\s]{2,25}$" required>
+                        placeholder="Enter model..." minlength="1" maxlength="25" value="{{ vehicle.model }}" pattern="^[a-zA-Z0-9\s]{1,25}$" required>
                     </div>
                 </div>
                 <!-- engine capacity -->
@@ -94,7 +94,7 @@
                         <i class="fa-solid fa-palette"></i>
                         <label for="colour" class="form-label">Colour</label>
                         <input type="text" class="form-control" id="colour" name="colour" minlength="3" maxlength="20"
-                            value="{{ vehicle.colour }}">
+                            value="{{ vehicle.colour }}"  pattern="^[a-zA-Z0-9\s]{3,20}$">
                     </div>
                 </div>
                 <!-- current owner switch -->
@@ -128,14 +128,20 @@
                         <label for="image">Add a photo of your vehicle</label><span> * </span>
                         <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
                     </div>
+                </div>
+                <div class="row">
+                    <!-- current photo of vehicle -->
                     <div class="form-group">
                         <i class="fa-regular fa-image"></i>
                         <label for="current_photo">Current Photo</label>
                         <img class="card-img-top" src="{{ vehicle.image_url }}" alt="A photo of a {{ vehicle.make }} {{ vehicle.model }}">
                     </div>
+                </div>
+                <!-- description -->
+                <div class="row">
                     <div class="form-group">
                         <i class="fa-solid fa-pen"></i>
-                        <label for="description">Image Description</label>
+                        <label for="description">Description (e.g. Modifications)</label>
                         <textarea class="form-control" id="description" name="description" rows="2" max="200"></textarea>
                     </div>
                 </div>
