--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     <div class="container">
         <h3 class="page-title">Register</h3>
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
                 <form method="POST" action="{{ url_for('register') }}">
                     <div class="card">
                         <div class="card-body ">
