Modify html attributes and remove whitespace

--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -106,7 +106,7 @@
                     <div class="form-group">
                         <i class="fa-solid fa-pen"></i>
                         <label for="description">Description (e.g. Modifications)</label>
-                        <textarea class="form-control" id="description" name="description" rows="4" max="200"></textarea>
+                        <textarea class="form-control" id="description" name="description" rows="4" maxlength="200"></textarea>
                     </div>
                 </div>
                 <!-- submit button -->
