--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -2,7 +2,7 @@
 {% set active_page = 'vehicle_types' %}
 {% block content %}
 
-    <h3 class="page-title">Manage Vehicles Types</h3>
+    <h3 class="page-title">Manage Vehicle Types</h3>
 
     <div class="row">
         <div class="col-12">
