Fix form label/id's

--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -50,30 +50,30 @@
                     <!-- litres or cc radio buttons -->
                     {% if vehicle.litre_cc == "Litre" %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
-                        <label class="form-check-label" for="litre_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre" checked>
+                        <label class="form-check-label" for="litre">
                             Litre
                         </label>
                     </div>
                     {% else %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre">
-                        <label class="form-check-label" for="litres_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre">
+                        <label class="form-check-label" for="litre">
                             Litre
                         </label>
                     </div>
                     {% endif %}
                     {% if vehicle.litre_cc == "CC" %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="CC" checked>
-                        <label class="form-check-label" for="litre_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="cc" value="CC" checked>
+                        <label class="form-check-label" for="cc">
                             CC
                         </label>
                     </div>
                     {% else %}
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="CC">
-                        <label class="form-check-label" for="litre_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="cc" value="CC">
+                        <label class="form-check-label" for="cc">
                             CC
                         </label>
                     </div>
