--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -47,14 +47,14 @@
                     </div>
                     <!-- litres or cc radio buttons -->
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="Litre" checked>
-                        <label class="form-check-label" for="litre_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre" checked>
+                        <label class="form-check-label" for="litre">
                             Litre
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre_cc" value="CC">
-                        <label class="form-check-label" for="litre_cc">
+                        <input class="form-check-input" type="radio" name="litre_cc" id="cc" value="CC">
+                        <label class="form-check-label" for="cc">
                             CC
                         </label>
                     </div>
