--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -6,7 +6,7 @@
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('edit_vehicle', vehicle_id=vehicle._id) }}" enctype="multipart/form-data">
                 <!-- vehicle type -->
-                <div class="row"></div>
+                <div class="row">
                     <div class="mb-3 col-12">
                         <i class="fa-solid fa-pen"></i>
                         <label for="vehicle_type" class="form-label">Vehicle Type</label><span> * </span>
@@ -133,7 +133,7 @@
                     <!-- current photo of vehicle -->
                     <div class="form-group">
                         <i class="fa-regular fa-image"></i>
-                        <label for="current_photo">Current Photo</label>
+                        <h3 for="current_photo">Current Photo</h3>
                         <img class="card-img-top" src="{{ vehicle.image_url }}" alt="A photo of a {{ vehicle.make }} {{ vehicle.model }}">
                     </div>
                 </div>
