--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -98,7 +98,7 @@
                     <div class="form-group">
                         <i class="fa-regular fa-image"></i>
                         <label for="image">Add a photo of your vehicle</label><span> * </span>
-                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required/>
+                        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required>
                     </div>
                 </div>
                 <!-- description -->
