--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -55,7 +55,7 @@
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="deleteModaldeleteModal{{ vehicle._id}}">Delete Vehicle?</h1>
+                                                <h1 class="modal-title fs-5" id="deleteModal{{ vehicle._id}}">Delete Vehicle?</h1>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
