--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -2,7 +2,7 @@
 {% set active_page = 'show_vehicles' %}
 {% block content %}
     
-    <h3 class=".h1 page-title">Show Vehicles</h3>
+    <h1 class="page-title fs-3">Show Vehicles</h1>
 
     <div class="row">
         <div class="col-12">
