Attempt to improve Wave result

--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -28,8 +28,8 @@
                         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
                             <img class="card-img-top" src="{{ vehicle.image_url }}" alt="A photo of a {{ vehicle.make }} {{ vehicle.model }}">
                             <div class="card-body"> 
-                                <h4 class="card-title text-shadow">{{ vehicle.make }}</h4>
-                                <h5 class="card-subtitle">{{ vehicle.model }}</h5>
+                                <h2 class="card-title text-shadow fs-4">{{ vehicle.make }}</h2>
+                                <h3 class="card-subtitle fs-5">{{ vehicle.model }}</h3>
                                 <p class="card-text">Engine Capacity: {{ vehicle.capacity }}</p>
                                 <p class="card-text">Litre/CC: {{ vehicle.litre_cc }}</p>
                                 <p class="card-text">Colour: {{ vehicle.colour }}</p>
