Apply heading changes site wide

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="h1 page-title">Ooops! Sorry Page Not Found</h3>
+    <h1 class="page-title fs-3">Ooops! Sorry Page Not Found</h1>
 
         <div class="row error-pages">
             <div class="col-12">
