--- a/templates/500.html
+++ b/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="page-title">Ooops! Sorry, something appears to have gone wrong</h3>
+    <h1 class="page-title fs-3">Ooops! Sorry, something appears to have gone wrong</h1>
 
         <div class="row error-pages">
             <div class="col-12">
