--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -2,7 +2,7 @@
 {% set active_page = 'add_new_vehicle' %}
 {% block content %}
 
-    <h3 class="page-title">Add New Vehicle</h3>
+    <h1 class="page-title fs-3">Add New Vehicle</h1>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('add_new_vehicle') }}" enctype="multipart/form-data">
