--- a/templates/add_vehicle_types.html
+++ b/templates/add_vehicle_types.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="page-title">Add Vehicle Type</h3>
+    <h1 class="page-title fs-3">Add Vehicle Type</h1>
 
         <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
             <form class="justify-content-center" method="POST" action="{{ url_for('add_vehicle_type') }}">
