--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="container">
-        <h3 class="page-title">Sign In</h3>
+        <h2 class="page-title fs-3">Sign In</h2>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <form method="POST" action="{{ url_for('sign_in') }}">
