Add fieldset to form

--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -46,18 +46,20 @@
                         min="0.1" max="9999" step="0.1" value="" required>
                     </div>
                     <!-- litres or cc radio buttons -->
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre" checked>
-                        <label class="form-check-label" for="litre">
-                            Litre
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="litre_cc" id="cc" value="CC">
-                        <label class="form-check-label" for="cc">
-                            CC
-                        </label>
-                    </div>
+                    <fieldset>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre" checked>
+                            <label class="form-check-label" for="litre">
+                                Litre
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="litre_cc" id="cc" value="CC">
+                            <label class="form-check-label" for="cc">
+                                CC
+                            </label>
+                        </div>
+                    </fieldset>
                 </div>
                 <!-- year of manufacture -->
                 <div class="row">
