Add fieldset to radio buttons

--- a/templates/add_new_vehicle.html
+++ b/templates/add_new_vehicle.html
@@ -47,6 +47,7 @@
                     </div>
                     <!-- litres or cc radio buttons -->
                     <fieldset>
+                        <legend class="h2 fs-5"><em>Choose Litres or CC</em></legend>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="litre_cc" id="litre" value="Litre" checked>
                             <label class="form-check-label" for="litre">
