--- a/templates/show_vehicles.html
+++ b/templates/show_vehicles.html
@@ -51,11 +51,11 @@
                                 </button>
                                 
                                 <!-- Modal -->
-                                <div class="modal fade" id="deleteModal{{ vehicle._id}}" tabindex="-1" aria-labelledby="deleteModal{{ vehicle._id}}" aria-hidden="true">
+                                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModal" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h1 class="modal-title fs-5" id="deleteModal{{ vehicle._id}}">Delete Vehicle?</h1>
+                                                <h1 class="modal-title fs-5" id="deleteModal">Delete Vehicle?</h1>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
