--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="container">
-        <h3 class="page-title">Register</h3>
+        <h1 class="page-title fs-3">Register</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 <form method="POST" action="{{ url_for('register') }}">
