--- a/templates/vehicle_types.html
+++ b/templates/vehicle_types.html
@@ -16,7 +16,7 @@
             <div class="col-md-6">
                 <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
                     <div class="card-body">
-                        <h4 class="card-title">{{ vehicle_type.vehicle_type }}</h4>
+                        <h2 class="card-title fs-4">{{ vehicle_type.vehicle_type }}</h2>
                         <!-- edit button -->
                         <a class="btn add-edit-save-btn" href="{{ url_for('edit_vehicle_type', vehicle_type_id=vehicle_type._id) }}" role="button">Edit <i
                                 class="fa-solid fa-pen"></i></a>
